argocd-managed/rick/rick.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick
spec:
  selector:
    matchLabels:
      app: rick
  replicas: 2
  template:
    metadata:
      labels:
        app: rick
    spec:
      automountServiceAccountToken: false
      containers:
        - name: sws
          image: ghcr.io/static-web-server/static-web-server:2.44.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: rick
              mountPath: /public/
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "10m"
              memory: "16Mi"
          args:
            - --root=/public
            - --log-level=info
            - --disable-symlinks=false
            - --health
          livenessProbe:
            httpGet:
              path: /health
              port: 80
          readinessProbe:
            httpGet:
              path: /health
              port: 80
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: rick
          configMap:
            name: rick
---
apiVersion: v1
kind: Service
metadata:
  name: rick
spec:
  selector:
    app: rick
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rick
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ninoo.nl`) || Host(`doktermarjolein.nl`) || Host(`0scar.nl`) || Host(`oscarrr.nl`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        - name: rick
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    # stsPreload: true
    # generated with https://report-uri.com/home/generate
    contentSecurityPolicy: default-src 'none'; script-src 'self' https://www.youtube.com; style-src 'self'; img-src 'self'; frame-src https://youtube.com https://www.youtube.com; frame-ancestors 'none'; form-action 'none'; base-uri 'none'
    referrerPolicy: no-referrer
    contentTypeNosniff: true
    frameDeny: true
    # generated with https://www.permissionspolicy.com/
    permissionsPolicy: accelerometer=(), ambient-light-sensor=(), battery=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), navigation-override=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share=(), xr-spatial-tracking=(), [...]
